--- a/templates/back/billing.html.twig
+++ b/templates/back/billing.html.twig
@@ -286,7 +286,7 @@
 					<div class="card-header pb-0 px-3">
 						<div class="row">
 							<div class="col-md-6">
-								<h6 class="mb-0">{{ 'Your Transaction's'|auto_translate }}</h6>
+								<h6 class="mb-0">{{ 'Your Transaction\'s'|auto_translate }}</h6>
 </div>
 <div class="col-md-6 d-flex justify-content-end align-items-center">
 <i class="far fa-calendar-alt me-2"></i>
