--- a/templates/back/virtual-reality.html.twig
+++ b/templates/back/virtual-reality.html.twig
@@ -56,7 +56,7 @@
 			<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4" id="sidenav-main">
 				<div class="sidenav-header">
 					<i aria-hidden="true" class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" id="iconSidenav"></i>
-					<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">{{ 'Argon Dashboard 2'|auto_translate }}</a>
+					<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">{{ 'Rakcha'|auto_translate }}</a>
 				</div>
 				<hr class="horizontal dark mt-0"/>
 				<div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
