--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -7,7 +7,7 @@
 		<link href="{{ asset('img/apple-icon.png') }}" rel="apple-touch-icon" sizes="76x76"/>
 		<link href="{{ asset('img/favicon.png') }}" rel="icon" type="image/png"/>
 		<title>
-			Argon Dashboard 2 by Creative Tim
+			Rakcha
 		</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
@@ -23,58 +23,126 @@
 		<link
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- CSS Files -->
-		<link href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" id="pagestyle" rel="stylesheet"/></head>
-</html></link></link></head><body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4" data-color="danger" id="sidenav-main"><div class="sidenav-header">
-<i aria-hidden="true" class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" id="iconSidenav"></i>
-<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
-	<img alt="main_logo" class="navbar-brand-img h-100" src="{{ asset('img/Logo.png') }}"/>
-	<span class="ms-1 font-weight-bold">Rakcha</span>
-</a></div><hr class="horizontal dark mt-0"/><div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
-<ul class="navbar-nav">
-	{% for item in ['users', 'profile', 'logout'] %}
-		<li class="nav-item">
-			<a class="nav-link {% if item == 'billing' %}active{% endif %}" href="{{path('app_' ~ item ~ '_index')}}">
-				<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-					{% set iconClass %}
-					{% if item == 'users' %}
-						ni-world-2 text-danger
-					{% elseif item == 'profile' %}
-						ni-single-02 text-dark
-					{% endif %}
-					{% endset %}
-					<i class="ni {{ iconClass }} text-sm opacity-10"></i>
+		<link href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" id="pagestyle" rel="stylesheet"/>
+		<link href="{{ asset('css/loading.css') }}" rel="stylesheet">
+	</head>
+	<body class="g-sidenav-show bg-gray-100">
+		<div id="loading">
+			<div class="loader">
+				<div class="box box0">
+					<div></div>
 				</div>
-				<span class="nav-link-text ms-1">{{ item|capitalize|auto_translate }}</span>
-			</a>
-		</li>
-	{% endfor %}
-
-</ul></div></aside>{% block body %}{% block footer %}
-<footer class="footer pt-3">
-	<div class="container-fluid">
-		<div class="row align-items-center justify-content-lg-between">
-			<div class="col-lg-6 mb-lg-0 mb-4">
-				<div class="copyright text-center text-sm text-muted text-lg-start">
-					©
-					<script>
-						document.write(new Date().getFullYear())
-					</script>,
-																																															made with
-					<i class="fa fa-heart"></i>
-					by
-					<a class="font-weight-bold" href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
-					for a better web.
+				<div class="box box1">
+					<div></div>
 				</div>
-			</div>
-			<div class="col-lg-6">
-				<ul class="nav nav-footer justify-content-center justify-content-lg-end">
-					{% for item in ['Creative Tim', 'About Us', 'Blog', 'License'] %}
-						<li class="nav-item">
-							<a class="nav-link text-muted" href="https://www.creative-tim.com" target="_blank">{{ item }}</a>
-						</li>
-					{% endfor %}
-				</ul>
+				<div class="box box2">
+					<div></div>
+				</div>
+				<div class="box box3">
+					<div></div>
+				</div>
+				<div class="box box4">
+					<div></div>
+				</div>
+				<div class="box box5">
+					<div></div>
+				</div>
+				<div class="box box6">
+					<div></div>
+				</div>
+				<div class="box box7">
+					<div></div>
+				</div>
+				<div class="ground">
+					<div></div>
+				</div>
 			</div>
 		</div>
-	</div>
-</footer>{% endblock %}{% endblock %}</body></html>
+		<script>
+			let pageLoaded = false;
+
+// Set pageLoaded to true when the page finishes loading
+window.onload = function () {
+pageLoaded = true;
+// If 5 seconds have already passed, hide the loading screen
+if (new Date().getTime() - startTime >= 5000) {
+document.getElementById('loading').style.display = 'none';
+}
+};
+
+let startTime = new Date().getTime();
+
+// Hide the loading screen 5 seconds after the page starts loading
+setTimeout(function () {
+if (pageLoaded) {
+document.getElementById('loading').style.display = 'none';
+}
+}, 5000);
+		</script>
+		{% block backContent %}{% endblock %}
+		<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4" data-color="danger" id="sidenav-main">
+			<div class="sidenav-header">
+				<i aria-hidden="true" class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" id="iconSidenav"></i>
+				<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
+					<img alt="main_logo" class="navbar-brand-img h-100" src="{{ asset('img/Logo.png') }}"/>
+					<span class="ms-1 font-weight-bold">Rakcha</span>
+				</a>
+			</div>
+			<hr class="horizontal dark mt-0"/><div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
+				<ul class="navbar-nav">
+					{% for item in ['users', 'profile', 'logout'] %}
+						<li class="nav-item">
+							<a class="nav-link {% if item == 'billing' %}active{% endif %}" href="{{path('app_' ~ item ~ '_index')}}">
+								<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+									{% set iconClass %}
+									{% if item == 'users' %}
+										ni-world-2 text-danger
+									{% elseif item == 'profile' %}
+										ni-single-02 text-dark
+									{% endif %}
+									{% endset %}
+									<i class="ni {{ iconClass }} text-sm opacity-10"></i>
+								</div>
+								<span class="nav-link-text ms-1">{{ item|capitalize|auto_translate }}</span>
+							</a>
+						</li>
+					{% endfor %}
+
+				</ul>
+			</div>
+		</aside>
+		{% block body %}
+			{% block footer %}
+				<footer class="footer pt-3">
+					<div class="container-fluid">
+						<div class="row align-items-center justify-content-lg-between">
+							<div class="col-lg-6 mb-lg-0 mb-4">
+								<div class="copyright text-center text-sm text-muted text-lg-start">
+									©
+									<script>
+										document.write(new Date().getFullYear())
+									</script>,
+																																																																																																																																																																																						made with
+									<i class="fa fa-heart"></i>
+									by
+									<a class="font-weight-bold" href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
+									for a better web.
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<ul class="nav nav-footer justify-content-center justify-content-lg-end">
+									{% for item in ['Creative Tim', 'About Us', 'Blog', 'License'] %}
+										<li class="nav-item">
+											<a class="nav-link text-muted" href="https://www.creative-tim.com" target="_blank">{{ item }}</a>
+										</li>
+									{% endfor %}
+								</ul>
+							</div>
+						</div>
+					</div>
+				</footer>
+			{% endblock %}
+		{% endblock %}
+
+	</body>
+</html>
