--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -12,6 +12,8 @@
 		<link
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
 		<!-- Nucleo Icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet"/>
 		<link
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
