--- a/templates/front/listfilms.html.twig
+++ b/templates/front/listfilms.html.twig
@@ -51,7 +51,9 @@
 											<a href="{{ path('app_category_show', {'id': category.id}) }}">{{ category.nom }}</a>
 											{% if not loop.last %},
 											{% endif %}
+											
 										{% endfor %} </h6>
+										<button class="btn text-white">show imdb</button>
 										<h6>Actors: {% for actor in film.actors %}
 											<a href="{{ path('app_actor_show', {'id': actor.id}) }}">{{ actor.nom }}</a>
 											{% if not loop.last %},
@@ -88,5 +90,7 @@ document.body.style.paddingTop = '0'
 }
 }
 		</script>
+		
 	</body>
+	
 {% endblock %}
