--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -8,6 +8,8 @@
 		<title>
 			Argon Dashboard 2 by Creative Tim
 		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 		<!--     Fonts and icons     -->
 		<link
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
