--- a/templates/back/filmTables.html.twig
+++ b/templates/back/filmTables.html.twig
@@ -1,5 +1,6 @@
 {% extends 'baseBack.html.twig' %}
 
+{% import 'back/macros.html.twig' as macros %}
 
 {% block backContent %}
 	<div class="min-height-300 bg-danger position-absolute w-100"></div>
@@ -136,52 +137,18 @@
 						<div class="card-header pb-0 d-flex justify-content-between">
 							<h6>Authors table</h6>
 							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-								Create
+								<svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewbox="0 0 448 512" style="color: white;"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32v144H48c-17.7 0-32 14.3-32 32s14.3 32 32 32h144v144c0 17.7 14.3 32 32 32s32-14.3 32-32V288h144c17.7 0 32-14.3 32-32s-14.3-32-32-32H256z"/></svg>
 							</button>
 						</div>
 
-						{% set hasErrors = false %}
-						{% for field in form %}
-							{% if field.vars.errors|length > 0 %}
-								{% set hasErrors = true %}
-								{% for error in field.vars.errors %}
-									<script>
-										new Noty({type: 'error', layout: 'topRight', text: '{{ error.message }}', theme: 'sunset'}).show();
-									</script>
-								{% endfor %}
-							{% endif %}
-						{% endfor %}
+						{{macros.display_notifications_noty('success',app.flashes('films'))}}
+						{{macros.display_form_notifications_noty(form)}}
+						{% if updateform is defined %}
+							{{macros.display_form_notifications_noty(updateform)}}
+						{% endif %}
 						<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-									</div>
-									<div class="modal-body">
-										{{ form_start(form, {'action': path('app_film_new')}) }}
-
-										{% for field in form %}
-											<div class="mb-3">
-													{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-													{% if field.vars.name != 'Nom' %}
-														{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-													{% endif %}
-												{{ form_errors(field) }}
-											</div>
-										{% endfor %}
-
-
-										<button class="btn">{{ button_label|default('Save') }}</button>
-
-										{{ form_end(form) }}
-
-									</div>
-									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button type="button" class="btn btn-primary">Understood</button>
-									</div>
-								</div>
+								{{macros.render_modal_form(form,path('app_film_new'),'Create Film')}}
 							</div>
 						</div>
 						{% if films is not empty %}
@@ -242,42 +209,26 @@
 														<span class="text-secondary text-xs font-weight-bold">{{ film.duree|date('H:i:s') }}</span>
 													</td>
 													<td class="align-middle">
-														<form method="post" action="{{ path('app_film_delete', {'id': film.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+														<form method="post" action="{{ path('app_film_delete', {'id': film.id}) }}" id="delete{{i}}">
 															<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ film.id) }}">
-															<button class="btn">Delete</button>
+															<button class="btn btn-danger" onclick="showSweetAlert('delete{{i}}')">
+																<svg xmlns="http://www.w3.org/2000/svg" width="1.7em" height="1.7em" viewbox="0 0 24 24" style="color: white;"><path fill="currentColor" d="M7.615 20q-.67 0-1.143-.472Q6 19.056 6 18.385V6H5V5h4v-.77h6V5h4v1h-1v12.385q0 .69-.462 1.152T16.385 20zM17 6H7v12.385q0 .269.173.442t.442.173h8.77q.23 0 .423-.192t.192-.423zM9.808 17h1V8h-1zm3.384 0h1V8h-1zM7 6v13z"/></svg>
+															</button>
 														</form>
 													</td>
 													<td class="align-middle">
-														<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{i}}">
-															Edit
+														<button type="button" class="btn {% if formUpdateNumber is not defined or i != formUpdateNumber %} btn-primary {% else %}  btn-danger    {% endif %}" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{i}}">
+															
+														<svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewbox="0 0 24 24" style="color: primary;"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5L2 22l1.5-5.5Zm-2 2l4 4"/></svg>
+
 														</button>
 														<div class="modal fade" id="staticBackdrop{{i}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 															<div class="modal-dialog">
-																<div class="modal-content">
-																	<div class="modal-header">
-																		<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-																		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-																	</div>
-																	<div class="modal-body">
-																		{{ form_start(updateForms[i], {'action': path('app_film_edit', {'id': film.id})}) }}
-
-																		{% for field in updateForms[i] %}
-																			<div class="mb-3">
-																				{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-																				{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-																				{{ form_errors(field) }}
-																			</div>
-																		{% endfor %}
-
-																		<button class="btn">{{ button_label|default('Save') }}</button>
-
-																		{{ form_end(updateForms[i]) }}
-																	</div>
-																	<div class="modal-footer">
-																		<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-																		<button type="button" class="btn btn-primary">Understood</button>
-																	</div>
-																</div>
+																{% if formUpdateNumber is not defined or i != formUpdateNumber %}
+																	{{ macros.render_modal_form(updateForms[i], path('app_film_edit', {'id': film.id, 'formUpdateNumber': i}), 'Edit ' ~ film.nom) }}
+																{% else %}
+																	{{ macros.render_modal_form(updateform, path('app_film_edit', {'id': film.id, 'formUpdateNumber': i}), 'Edit ' ~ film.nom) }}
+																{% endif %}
 															</div>
 														</div>
 													</td>
@@ -615,13 +566,53 @@ Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
 	<script src="{{ asset('js/argon-dashboard.min.js?v=2.0.4') }}"></script>
-	{% if hasErrors %}
+	{% if hasErrorsCreate is defined  %}
 		<script>
 			const myModal = new bootstrap.Modal('#staticBackdrop', {keyboard: false});
 const modalToggle = document.getElementById('staticBackdrop');
 myModal.show(modalToggle);
 		</script>
 	{% endif %}
+	{% if formUpdateNumber is defined %}
+		<script>
+			const myModal = new bootstrap.Modal("{{ '#staticBackdrop' ~ formUpdateNumber }}", {keyboard: false});
+const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNumber }}");
+myModal.show(modalToggle);
+		</script>
+	{% endif %}
+	<script>
+			function showSweetAlert(formName) {
+document.getElementById(formName).addEventListener('submit', function (event) {
+event.preventDefault();
+const swalWithBootstrapButtons = Swal.mixin({
+customClass: {
+confirmButton: "btn btn-success ms-4",
+cancelButton: "btn btn-danger"
+},
+buttonsStyling: false
+});
+swalWithBootstrapButtons.fire({
+title: "Are you sure?",
+text: "You won't be able to revert this!",
+icon: "warning",
+showCancelButton: true,
+confirmButtonText: "Yes, delete it!",
+cancelButtonText: "No, cancel!",
+reverseButtons: true
+}).then((result) => {
+if (result.isConfirmed) {
+swalWithBootstrapButtons.fire({title: "Deleted!", text: "The film has been deleted.", icon: "success"});
+document.getElementById(formName).submit();
+} else if (
+/* Read more about handling dismissals below */
+result.dismiss === Swal.DismissReason.cancel
+) {
+swalWithBootstrapButtons.fire({title: "Cancelled", text: "The film is not deleted 🙂", icon: "error"});
+}
+});
+});
+}
+		</script>
 </body>
 
 {% endblock %}
