--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -14,6 +14,7 @@
 		<!-- Nucleo Icons -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet"/>
 		<link
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
