fixation controle de saisie cinema

--- a/templates/cinema/CinemasTable.html.twig
+++ b/templates/cinema/CinemasTable.html.twig
@@ -1,4 +1,6 @@
 {% extends 'baseBack.html.twig' %}
+	{% import 'cinema/macros.html.twig' as macros %}
+
 
 
 {% block backContent %}
@@ -138,62 +140,17 @@
 							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
 								Add New Cinema
 							</button>
-<<<<<<< Updated upstream
-							{% for flash_error in app.flashes('cinemas') %}
-								<script>
-									new Noty({type: 'success', layout: 'topRight', text: '{{ flash_error }}'}).show();
-								</script>
-							{% endfor %}
-							{% set hasErrorsCreate = false %}
-							{% set hasErrorsUpdate = false %}
-							{% for field in form %}
-								{% if field.vars.errors|length > 0 %}
-									{% set hasErrorsCreate = true %}
-									{% for error in field.vars.errors %}
-										<script>
-											new Noty({type: 'error', layout: 'topRight', text: '{{ error.message }}', theme: 'sunset'}).show();
-										</script>
-									{% endfor %}
-=======
 							{{macros.display_notifications_noty('success',app.flashes('cinemas'))}}
 								{{macros.display_form_notifications_noty(form)}}
 								{% if updateform is defined %}
 									{{macros.display_form_notifications_noty(updateform)}}
->>>>>>> Stashed changes
 								{% endif %}
-							{% endfor %}
 						</div>
 
 						<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title" id="staticBackdropLabel">ADD CINEMA</h5>
-										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-									</div>
-									<div class="modal-body">
-										{{ form_start(form, {'action': path('app_cinema_new'), 'attr': {'novalidate': 'novalidate'}}) }}
-
-										{% for field in form %}
-											<div class="mb-3">
-												{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-
-												{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-												{{ form_errors(field) }}
-											</div>
-										{% endfor %}
-									</div>
-
-									<div class="modal-footer">
-
-										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
-
-									</div>
-								</div>
-							</div>
+							<div class="modal-dialog">{{macros.render_modal_form(form,path('app_cinema_new'),'Create Cinema')}}
+								</div>	
 						</div>
-						{{ form_end(form) }}
 
 
 						<div class="card-body px-0 pt-0 pb-2">
@@ -253,53 +210,11 @@
 
 													<div class="modal fade" id="staticBackdrop{{i}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 														<div class="modal-dialog">
-															<div class="modal-content">
-																{% for field in updateForms[i] %}
-																	{% if field.vars.errors|length > 0 %}
-																		{% set hasErrorsUpdate = true %}
-																		{% for error in field.vars.errors %}
-																			<script>
-																				new Noty({type: 'error', layout: 'topRight', text: '{{ error.message }}', theme: 'sunset'}).show();
-																			</script>
-																		{% endfor %}
-																	{% endif %}
-																{% endfor %}
-																<div class="modal-header">
-																	<h5 class="modal-title" id="staticBackdropLabel">EDIT
-																		{{cinema.nom}}</h5>
-																	<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
-																</div>
-																<div class="modal-body">
-																	{{ form_start(updateForms[i], {'action': path('app_cinema_edit', {'idCinema': cinema.idCinema}), 'attr': {'novalidate': 'novalidate'}}) }}
-
-																	{% for field in updateForms[i] %}
-																		<div class="mb-3">
-																			{{ form_label(field, null, {'label_attr': {'class': 'col-form-label'}}) }}
-																			{{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
-																			{{ form_errors(field) }}
-
-																		</div>
-																	{% endfor %}
-
-
-																</div>
-
-																{% if hasErrorsUpdate %}
-																	<script>
-																		const myModal = new bootstrap.Modal("#staticBackdrop{{i}}", {keyboard: false});
-															const modalToggle = document.getElementById("staticBackdrop{{i}}");
-															myModal.show(modalToggle);
-																	</script>
-																{% endif %}
-
-
-																<div class="modal-footer">
-																	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-																	<button class="btn">{{ button_label|default('Save') }}</button>
-																	{{ form_end(updateForms[i]) }}
-																</div>
-															</div>
+															{% if formUpdateNumber is not defined or i != formUpdateNumber %}
+																{{ macros.render_modal_form(updateForms[i], path('app_cinema_edit', {'idCinema': cinema.idCinema, 'formUpdateNumber': i}), 'Edit Cinema ' ~ i) }}
+															{% else %}
+																{{ macros.render_modal_form(updateform, path('app_cinema_edit', {'idCinema': cinema.idCinema, 'formUpdateNumber': i}), 'Edit Cinema ' ~ i) }}
+															{% endif %}
 														</div>
 													</div>
 												</td>
@@ -632,10 +547,17 @@ Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
 	<script src="{{ asset('js/argon-dashboard.min.js?v=2.0.4') }}"></script>
-	{% if hasErrorsCreate %}
+	{% if hasErrorsCreate is defined  %}
 		<script>
 			const myModal = new bootstrap.Modal('#staticBackdrop', {keyboard: false});
 const modalToggle = document.getElementById('staticBackdrop');
+myModal.show(modalToggle);
+		</script>
+	{% endif %}
+	{% if formUpdateNumber is defined %}
+		<script>
+			const myModal = new bootstrap.Modal("{{ '#staticBackdrop' ~ formUpdateNumber }}", {keyboard: false});
+const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNumber }}");
 myModal.show(modalToggle);
 		</script>
 	{% endif %}
