design cards + finished all cruds

--- a/templates/back/filmTables.html.twig
+++ b/templates/back/filmTables.html.twig
@@ -159,9 +159,17 @@
 										<thead>
 											<tr>
 												<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Film</th>
-												<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Function</th>
-												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
-												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Employed</th>
+												<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Year</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Actors</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Category</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Time</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Delete</th>
+												<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Edit</th>
+
+
+
+
 												<th class="text-secondary opacity-7"></th>
 											</tr>
 										</thead>
