--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -13,16 +13,13 @@
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
 		<!-- Nucleo Icons -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet"/>
-		<link
-		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+		 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet"/> <link href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- Font Awesome Icons -->
-		<script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+		 <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
 		<link
-		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
-		<!-- CSS Files -->
+		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/> <!-- CSS Files -->
 		<link id="pagestyle" href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" rel="stylesheet"/>
 	</head>
 	<body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}
@@ -49,7 +46,7 @@
 									{% elseif item == 'billing' %}
 										ni-credit-card text-success
 									{% elseif item == 'film' %}
-										ni-credit-card text-success
+										fa fa-film text-primary
 									{% elseif item == 'actor' %}
 										ni-credit-card text-success
 									{% elseif item == 'category' %}
@@ -86,10 +83,11 @@
 							<div class="col-lg-6 mb-lg-0 mb-4">
 								<div class="copyright text-center text-sm text-muted text-lg-start">
 									©
-									<script>
-										document.write(new Date().getFullYear())
-									</script>,
-																											made with
+									 <script>
+																																																							document.write(new Date().getFullYear())
+																																																						</script>
+									,
+																																																																								made with
 									<i class="fa fa-heart"></i>
 									by
 									<a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
