--- a/templates/front/listfilms.html.twig
+++ b/templates/front/listfilms.html.twig
@@ -30,67 +30,130 @@
 				</div>
 			</div>
 		</section>
+		<style>
+			.flip-card {
+				background-color: transparent;
+				height: 460px;
+				perspective: 1000px;
+				font-family: sans-serif;
+			}
 
+			.title {
+				font-size: 1.5em;
+				font-weight: 900;
+				text-align: center;
+				margin: 0;
+			}
+
+			.flip-card-inner {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				transition: transform 0.8s;
+				transform-style: preserve-3d;
+			}
+
+			.flip-card:hover .flip-card-inner {
+				transform: rotateY(180deg);
+			}
+
+			.flip-card-front,
+			.flip-card-back {
+				box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
+				position: absolute;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				width: 100%;
+				height: 100%;
+				-webkit-backface-visibility: hidden;
+				backface-visibility: hidden;
+				border: 1px solid #f90532;
+				border-radius: 1rem;
+			}
+
+			.flip-card-front {
+				background: linear-gradient(120deg, bisque 60%, rgb(255, 231, 222) 88%, rgb(255, 211, 195) 40%, rgba(255, 127, 80, 0.603) 48%);
+				color: coral;
+			}
+
+			.flip-card-back {
+				background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%, bisque 40%, rgb(255, 185, 160) 78%);
+				color: white;
+				transform: rotateY(180deg);
+			}
+		</style>
 		<section id="team" class="pt-4 pb-4 bg_grey">
 			<div class="container-xl">
 				{% set j = 0 %}
 				{% for i in range(0,films|length // 3) %}
 					<div class="team_1i row {% if not loop.first %} mt-4{% endif %} ">
 						{% for film in films|slice(loop.index0 * 3, 3) %}
-							<div class="col-md-4">
-								<div class="team_1i1 clearfix position-relative">
-									<div class="team_1i1i clearfix">
-										<div class="grid clearfix">
-											<figure class="effect-jazz mb-0">
-												<a href="#"><img src="{{ asset(film.image) }}" class="w-100" alt="abc"></a>
-											</figure>
+							<div class="flip-card col-md-4 ">
+								<div class="flip-card-inner ">
+									<div
+										class="flip-card-front">
+										{# <p class="title">FLIP CARD</p> #}
+										<img src="{{ asset(film.image) }}" alt="" style="border-radius: 15px;" class="w-100 h-100">
+										<div class="team_1i1i1 clearfix position-absolute w-100 bottom-0" style="border-radius: 0px 0px 15px 15px; height: 30%;">
+											<h4 class="col_red">{{film.nom}}</h4>
+											<h6>categorys:
+												{% for category in film.categorys %}
+													<a href="{{ path('app_category_show', {'id': category.id}) }}">{{ category.nom }}</a>
+													{% if not loop.last %},
+													{% endif %}
+
+												{% endfor %}
+											</h6>
+
+
 										</div>
 									</div>
-									<div class="team_1i1i1 clearfix position-absolute w-100 bottom-0">
-										<h4 class="col_red">{{film.nom}}</h4>
-										<h6>categorys:
-											{% for category in film.categorys %}
-												<a href="{{ path('app_category_show', {'id': category.id}) }}">{{ category.nom }}</a>
-												{% if not loop.last %},
-												{% endif %}
+									<div class="flip-card-back">
+										<div class="team_1i1i1 clearfix position-absolute w-100 bottom-0" style="height: 100%;border-radius:15px;">
+											<h4 class="col_red">{{film.nom}}</h4>
+											<h6>categorys:
+												{% for category in film.categorys %}
+													<a href="{{ path('app_category_show', {'id': category.id}) }}">{{ category.nom }}</a>
+													{% if not loop.last %},
+													{% endif %}
 
-											{% endfor %}
-										</h6>
-										<button class="btn text-white">show imdb</button>
-										<h6>Actors:
-											{% for actor in film.actors %}
-												<a href="{{ path('app_actor_show', {'id': actor.id}) }}">{{ actor.nom }}</a>
-												{% if not loop.last %},
-												{% endif %}
-											{% endfor %}
-										</h6>
-										<p>{{film.description}}</p>
+												{% endfor %}
+											</h6>
+											<button class="btn text-white">show imdb</button>
+											<h6>Actors:
+												{% for actor in film.actors %}
+													<a href="{{ path('app_actor_show', {'id': actor.id}) }}">{{ actor.nom }}</a>
+													{% if not loop.last %},
+													{% endif %}
+												{% endfor %}
+											</h6>
 
-										<button class="button mt-4" data-bs-toggle="modal" data-bs-target="#Youtubewatch{{j}}"data-theVideo="{{videoUrl[j]}}">
-											<i class="fa fa-play-circle align-middle me-1"></i>
-											Watch Trailer</button>
-						
-										<div
+											<p>{{film.description}}</p>
+											<button class="button mt-4" data-bs-toggle="modal" data-bs-target="#Youtubewatch{{j}}" data-thevideo="{{videoUrl[j]}}">
+												<i class="fa fa-play-circle align-middle me-1"></i>
+												Watch Trailer</button>
 
-											class="modal fade" id="Youtubewatch{{j}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden=" true">
-											{# modal-md ou modal-sm ou modal-lg ou modal-xl #}
-											<div class="modal-dialog modal-lg">
-												<div class="modal-content">
-													<div class="modal-header">
-														<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-														<button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
-													</div>
-													<div class="modal-body">
-														<iframe width="560" height="315" src="{{videoUrl[j]}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-													</div>
-													<div class="modal-footer">
-													
+											<div
+												class="modal fade" id="Youtubewatch{{j}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden=" true">
+												{# modal-md ou modal-sm ou modal-lg ou modal-xl #}
+												<div class="modal-dialog modal-lg">
+													<div class="modal-content">
+														<div class="modal-header">
+															<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+															<button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+														</div>
+														<div class="modal-body">
+															<iframe width="560" height="315" src="{{videoUrl[j]}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+														</div>
+														<div class="modal-footer"></div>
 													</div>
 												</div>
 											</div>
+
 										</div>
 									</div>
-
 								</div>
 							</div>
 							{% set j = j + 1  %}
@@ -103,47 +166,45 @@
 		</section>
 
 		{{ block("footer") }}
-<script>
-	function autoPlayYouTubeModal() {
-		var triggers = document.querySelectorAll('[data-bs-toggle="modal"]');
-		triggers.forEach(function(trigger) {
-		  trigger.addEventListener('click', function() {
-			var theModal = this.getAttribute('data-bs-target');
-			var videoSRC = this.getAttribute('data-theVideo');
-			var videoSRCauto = videoSRC + "?autoplay=1";
-			document.querySelector(theModal + ' iframe').setAttribute('src', videoSRCauto);
-			
-			var closeButton = document.querySelector(theModal + ' button.close');
-			closeButton.addEventListener('click', function() {
-			  document.querySelector(theModal + ' iframe').setAttribute('src', videoSRC);
-			});
-		  });
-		});
-	  }
-	  document.addEventListener('DOMContentLoaded', function() {
-  autoPlayYouTubeModal();
-});
-</script>
-		<script>
-			window.onscroll = function () {
-myFunction()
-};
-
-var navbar_sticky = document.getElementById("navbar_sticky");
-var sticky = navbar_sticky.offsetTop;
-var navbar_height = document.querySelector('.navbar').offsetHeight;
-
-function myFunction() {
-if (window.pageYOffset >= sticky + navbar_height) {
-navbar_sticky.classList.add("sticky")
-document.body.style.paddingTop = navbar_height + 'px';
-} else {
-navbar_sticky.classList.remove("sticky");
-document.body.style.paddingTop = '0'
-}
-}
-		</script>
-
+	 <script>
+								function autoPlayYouTubeModal() {
+												var triggers = document.querySelectorAll('[data-bs-toggle="modal"]');
+												triggers.forEach(function (trigger) {
+												trigger.addEventListener('click', function () {
+												var theModal = this.getAttribute('data-bs-target');
+												var videoSRC = this.getAttribute('data-theVideo');
+												var videoSRCauto = videoSRC + "?autoplay=1";
+												document.querySelector(theModal + ' iframe').setAttribute('src', videoSRCauto);
+												
+												var closeButton = document.querySelector(theModal + ' button.close');
+												closeButton.addEventListener('click', function () {
+												document.querySelector(theModal + ' iframe').setAttribute('src', videoSRC);
+												});
+												});
+												});
+												}
+												document.addEventListener('DOMContentLoaded', function () {
+												autoPlayYouTubeModal();
+												});
+														</script>
+		 <script>
+												window.onscroll = function () {
+																		myFunction()
+																		};
+																		
+																		var navbar_sticky = document.getElementById("navbar_sticky");
+																		var sticky = navbar_sticky.offsetTop;
+																		var navbar_height = document.querySelector('.navbar').offsetHeight;
+																		
+																		function myFunction() {
+																		if (window.pageYOffset >= sticky + navbar_height) {
+																		navbar_sticky.classList.add("sticky")
+																		document.body.style.paddingTop = navbar_height + 'px';
+																		} else {
+																		navbar_sticky.classList.remove("sticky");
+																		document.body.style.paddingTop = '0'
+																		}
+																		}
+																				</script>
 	</body>
-
 {% endblock %}
